mod_xml2enc: Fix forwarding of error metadata/responses. PR 62180.

All meta buckets are now aggregated (besides FLUSH) and forwarded down
the chain, and the output filter bails out on EOS.

Proposed by: Micha Lenk <micha lenk.info>



git-svn-id: https://svn.apache.org/repos/asf/httpd/httpd/trunk@1829038 13f79535-47bb-0310-9956-ffa450edef68